# c3ft

./: CMakeLists.txt
cli/: main.cpp
include/c3ft/: net.hpp
src/: crypto.cpp  server.cpp
